# typewriter.nvim

./: CMakeLists.txt  README.md
lua/: typewriter.lua
src/: typewriter.cpp
